--- a/milos/reservations/templates/reservations/home.html
+++ b/milos/reservations/templates/reservations/home.html
@@ -31,7 +31,7 @@
     <div class="container-fluid bg-light">
       <img
         src="{% static 'MDS.jpg' %}"
-        style="position: absolute; width: 100px; height: 100px"
+        style="position: absolute; width: 100px; height: 100px; bottom:0;"
       />
       <div class="container p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
