--- a/milos/reservations/templates/reservations/home.html
+++ b/milos/reservations/templates/reservations/home.html
@@ -25,6 +25,10 @@
         border: 1px solid #ddd;
         margin-bottom: 12px;
       }
+      .dark-time-input {
+        background-color: #333;
+        color: #fff;
+    }
     </style>
   </head>
   <body>
